add some static files

--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html lang="fa" dir="rtl" prefix="og: http://ogp.me/ns#">
     <head>
         <meta charset="UTF-8" />
-        <base href="https://evazzadeh.com" />
         <title>جواد ادیب</title>
         <!--[if IE
             ]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
         /><![endif]-->
-        <!--[if lte IE 9
-            ]><script>
-                document.location = "https://deadbrowser.com/fa";
-            </script><!
-        [endif]-->
         <meta
             name="description"
             content="Trust Me, I&#039;m an Engineer Place to share knowledge of a human on earth! | Trust Me, I&#039;m an Engineer"
@@ -25,10 +19,7 @@
             content="Trust Me, I&#039;m an Engineer Place to share knowledge of a human on earth! | Trust Me, I&#039;m an Engineer"
         />
         <meta name="twitter:url" content="https://evazzadeh.com/" />
-        <meta
-            name="twitter:image"
-            content="https://evazzadeh.com/static/images/logo.png"
-        />
+        <meta name="twitter:image" content="static/images/logo.png" />
         <meta property="og:title" content="جواد ادیب" />
         <meta
             property="og:description"
@@ -37,10 +28,7 @@
         <meta property="og:url" content="https://evazzadeh.com/" />
         <meta property="og:type" content="website" />
         <meta property="og:locale" content="fa" />
-        <meta
-            property="og:image"
-            content="https://evazzadeh.com/static/images/logo.png"
-        />
+        <meta property="og:image" content="static/images/logo.png" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0,maximum-scale=1.1, user-scalable=0"
@@ -48,53 +36,47 @@
         <meta name="application-name" content="جواد ادیب" />
         <meta
             name="msapplication-config"
-            content="https://evazzadeh.com/static/images/favicons/browserconfig.xml?v=1"
+            content="static/images/favicons/browserconfig.xml?v=1"
         />
         <meta name="theme-color" content="#ffffff" />
         <link
             rel="apple-touch-icon"
-            href="https://evazzadeh.com/static/images/favicons/apple-touch-icon.png?v=1"
+            href="static/images/favicons/apple-touch-icon.png?v=1"
             sizes="180x180"
         />
         <link
             rel="icon"
-            href="https://evazzadeh.com/static/images/favicons/favicon-32x32.png?v=1"
+            href="static/images/favicons/favicon-32x32.png?v=1"
             sizes="32x32"
             type="image/png"
         />
         <link
             rel="icon"
-            href="https://evazzadeh.com/static/images/favicons/favicon-16x16.png?v=1"
+            href="static/images/favicons/favicon-16x16.png?v=1"
             sizes="16x16"
             type="image/png"
         />
         <link
             rel="mask-icon"
-            href="https://evazzadeh.com/static/images/favicons/safari-pinned-tab.svg?v=1"
+            href="static/images/favicons/safari-pinned-tab.svg?v=1"
         />
         <link
             rel="shortcut icon"
-            href="https://evazzadeh.com/static/images/favicons/favicon.ico?v=1"
+            href="static/images/favicons/favicon.ico?v=1"
         />
         <link
             rel="manifest"
             href="https://evazzadeh.com/manifest.webmanifest"
         />
         <link rel="author" href="https://evazzadeh.com/humans.txt" />
-        <link
-            rel="stylesheet"
-            href="https://evazzadeh.com/static/siftal/css/siftal.css?1543370899"
-        />
-        <link
-            rel="stylesheet"
-            href="https://evazzadeh.com/static/css/style.css?1543610793"
-        />
+        <link rel="stylesheet" href="static/siftal/css/siftal.css?1543370899" />
+        <link rel="stylesheet" href="static/css/style.css?1543610793" />
     </head>
 
     <body data-in="site" data-page="home" class="rtl preloadloading">
         <div class="me">
             <img
-                src="https://evazzadeh.com/static/images/Javad-Evazzadeh-Kakroudi-2016.jpg"
+                src="static/images/Javad-Evazzadeh-Kakroudi-2016.jpg"
                 alt="جواد ادیب"
             />
             <h1>جواد ادیب</h1>
@@ -191,18 +173,9 @@
 
         <div class="rainSound">
             <audio id="audioplayer" loop="loop">
-                <source
-                    src="https://evazzadeh.com/static/audio/rain.gp"
-                    type="audio/ogg"
-                />
-                <source
-                    src="https://evazzadeh.com/static/audio/rain.4p"
-                    type="audio/mp4"
-                />
-                <source
-                    src="https://evazzadeh.com/static/audio/rain.3p"
-                    type="audio/mpeg"
-                />
+                <source src="static/audio/rain.gp" type="audio/ogg" />
+                <source src="static/audio/rain.4p" type="audio/mp4" />
+                <source src="static/audio/rain.3p" type="audio/mpeg" />
                 Your browser does not support the audio element.
             </audio>
         </div>
@@ -249,15 +222,15 @@
             <a
                 class="section-static bottom"
                 data-direct
-                href="https://evazzadeh.com/static/resume/Resume_Javad_Evazzadeh-v1.7.pdf"
+                href="static/resume/Resume_Javad_Evazzadeh-v1.7.pdf"
             ></a>
         </div>
         <script
             data-cfasync="false"
             src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
         ></script>
-        <script src="https://evazzadeh.com/static/siftal/js/siftal.min.js?1543370899"></script>
-        <script src="https://evazzadeh.com/static/js/script.js?1543610793"></script>
+        <script src="static/siftal/js/siftal.min.js?1543370899"></script>
+        <script src="static/js/script.js?1543610793"></script>
         <script
             async
             src="https://www.googletagmanager.com/gtag/js?id=UA-29692827-1"
