update some links

--- a/index.html
+++ b/index.html
@@ -64,11 +64,8 @@
             rel="shortcut icon"
             href="static/images/favicons/favicon.ico?v=1"
         />
-        <link
-            rel="manifest"
-            href="https://evazzadeh.com/manifest.webmanifest"
-        />
-        <link rel="author" href="https://evazzadeh.com/humans.txt" />
+        <link rel="manifest" href="manifest.webmanifest" />
+        <link rel="author" href="humans.txt" />
         <link rel="stylesheet" href="static/siftal/css/siftal.css?1543370899" />
         <link rel="stylesheet" href="static/css/style.css?1543610793" />
     </head>
@@ -81,10 +78,7 @@
             />
             <h1>جواد ادیب</h1>
 
-            <a
-                data-direct
-                href="https://evazzadeh.com/blog"
-                class="btn primary myBlogLink"
+            <a data-direct href="blog" class="btn primary myBlogLink"
                 >وب توشه‌های من</a
             >
 
@@ -98,7 +92,7 @@
                             class="socialLink"
                             data-direct
                             target="_blank"
-                            href="Mr.Javad.Adib@gmail.com"
+                            href="mailto:Mr.Javad.Adib@gmail.com"
                             title="رایانامه"
                         >
                             <i class="sf-at"></i>
@@ -110,8 +104,7 @@
                             class="socialLink"
                             data-direct
                             target="_blank"
-                            href="
-          https://github.com/MrJavadAdib/"
+                            href="https://github.com/JohnAdib/"
                             title="گیت‌هاب"
                         >
                             <i class="sf-github"></i>
@@ -123,7 +116,7 @@
                             class="socialLink"
                             data-direct
                             target="_blank"
-                            href="https://instagram.com/MrJavadAdib"
+                            href="https://instagram.com/MrJohnAdib"
                             title=" اینستاگرام"
                         >
                             <i class="sf-instagram"></i>
@@ -135,7 +128,7 @@
                             class="socialLink"
                             data-direct
                             target="_blank"
-                            href="https://www.facebook.com/MrJavadAdib"
+                            href="https://www.facebook.com/MrJohnAdib"
                             title="فیس‌بوک"
                         >
                             <i class="sf-facebook-official"></i>
@@ -159,8 +152,7 @@
                             class="socialLink"
                             data-direct
                             target="_blank"
-                            href="
-          https://ir.linkedin.com/in/MrAdib/"
+                            href="https://ir.linkedin.com/in/MrAdib/"
                             title="لینکدین"
                         >
                             <i class="sf-linkedin"></i>
@@ -222,7 +214,7 @@
             <a
                 class="section-static bottom"
                 data-direct
-                href="static/resume/Resume_Javad_Evazzadeh-v1.7.pdf"
+                href="https://resume.mradib.com"
             ></a>
         </div>
         <script src="static/siftal/js/siftal.min.js?1543370899"></script>
